# serializer version: 1
# name: test_command[gps-admin-readonly]
  list([
    'view_followupgroup',
    'view_followupgroupmembership',
    'view_jobseekerprofile',
    'view_user',
  ])
# ---
# name: test_command[gps-admin]
  list([
    'add_followupgroup',
    'change_followupgroup',
    'delete_followupgroup',
    'view_followupgroup',
    'add_followupgroupmembership',
    'change_followupgroupmembership',
    'delete_followupgroupmembership',
    'view_followupgroupmembership',
    'change_jobseekerprofile',
    'view_jobseekerprofile',
    'add_user',
    'change_user',
    'hijack_user',
    'view_user',
  ])
# ---
# name: test_command[itou-admin-readonly]
  list([
    'view_emailaddress',
    'view_datum',
    'view_statsdashboardvisit',
    'view_approval',
    'view_cancelledapproval',
    'view_poleemploiapproval',
    'view_prolongation',
    'view_suspension',
    'view_commune',
    'view_country',
    'view_department',
    'view_city',
    'view_company',
    'view_companymembership',
    'view_jobdescription',
    'view_siaeconvention',
    'view_siaefinancialannex',
    'view_administrativecriteria',
    'view_eligibilitydiagnosis',
    'view_selectedadministrativecriteria',
    'view_employeerecord',
    'view_institution',
    'view_institutionmembership',
    'view_employerinvitation',
    'view_laborinspectorinvitation',
    'view_prescriberwithorginvitation',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_appellation',
    'view_rome',
    'view_prescribermembership',
    'view_prescriberorganization',
    'view_calendar',
    'view_evaluatedadministrativecriteria',
    'view_evaluatedjobapplication',
    'view_evaluatedsiae',
    'view_evaluationcampaign',
    'view_sanctions',
    'view_jobseekerprofile',
    'view_user',
  ])
# ---
# name: test_command[itou-admin]
  list([
    'add_emailaddress',
    'change_emailaddress',
    'view_emailaddress',
    'view_datum',
    'view_statsdashboardvisit',
    'add_approval',
    'change_approval',
    'delete_approval',
    'view_approval',
    'view_cancelledapproval',
    'view_poleemploiapproval',
    'add_prolongation',
    'change_prolongation',
    'delete_prolongation',
    'view_prolongation',
    'add_suspension',
    'change_suspension',
    'delete_suspension',
    'view_suspension',
    'view_commune',
    'view_country',
    'view_department',
    'view_city',
    'add_company',
    'change_company',
    'view_company',
    'add_companymembership',
    'change_companymembership',
    'delete_companymembership',
    'view_companymembership',
    'add_jobdescription',
    'change_jobdescription',
    'delete_jobdescription',
    'view_jobdescription',
    'change_siaeconvention',
    'view_siaeconvention',
    'view_siaefinancialannex',
    'view_administrativecriteria',
    'add_eligibilitydiagnosis',
    'change_eligibilitydiagnosis',
    'view_eligibilitydiagnosis',
    'add_selectedadministrativecriteria',
    'change_selectedadministrativecriteria',
    'delete_selectedadministrativecriteria',
    'view_selectedadministrativecriteria',
    'change_employeerecord',
    'delete_employeerecord',
    'view_employeerecord',
    'add_institution',
    'change_institution',
    'view_institution',
    'add_institutionmembership',
    'change_institutionmembership',
    'delete_institutionmembership',
    'view_institutionmembership',
    'change_employerinvitation',
    'delete_employerinvitation',
    'view_employerinvitation',
    'change_laborinspectorinvitation',
    'delete_laborinspectorinvitation',
    'view_laborinspectorinvitation',
    'change_prescriberwithorginvitation',
    'delete_prescriberwithorginvitation',
    'view_prescriberwithorginvitation',
    'change_jobapplication',
    'delete_jobapplication',
    'view_jobapplication',
    'view_jobapplicationtransitionlog',
    'view_appellation',
    'view_rome',
    'add_prescribermembership',
    'change_prescribermembership',
    'delete_prescribermembership',
    'view_prescribermembership',
    'add_prescriberorganization',
    'change_prescriberorganization',
    'view_prescriberorganization',
    'view_calendar',
    'view_evaluatedadministrativecriteria',
    'view_evaluatedjobapplication',
    'view_evaluatedsiae',
    'view_evaluationcampaign',
    'view_sanctions',
    'change_jobseekerprofile',
    'view_jobseekerprofile',
    'add_user',
    'change_user',
    'view_user',
  ])
# ---
# name: test_command[stdout]
  '''
  group name=gps-admin created
  group name=gps-admin-readonly created
  group name=itou-admin created
  group name=itou-admin-readonly created
  All done!
  
  '''
# ---
